force-app/main/default/objects/AMCM__c/fields/RiskPolicyHolderLicenseDate__c.field-meta.xml
<CustomField>
    <fullName>RiskPolicyHolderLicenseDate__c</fullName>
    <description>Muestra antigüedad del carnet del tomador.</description>
    <label>Fecha Carnet de Tomador</label>
    <type>Date</type>
</CustomField>