force-app/main/default/objects/AMCM__c/fields/RiskPostalCode__c.field-meta.xml
<CustomField>
    <fullName>RiskPostalCode__c</fullName>
    <description>Muestra el código de localización postal.</description>
    <label>Código Postal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>