force-app/main/default/objects/AMCM__c/fields/RiskPropertyType__c.field-meta.xml
<CustomField>
    <fullName>RiskPropertyType__c</fullName>
    <description>Muestra qué tipo de vivienda es.</description>
    <label>Tipo de Vivienda</label>
    <length>120</length>
    <type>Text</type>
</CustomField>