force-app/main/default/objects/AMCM__c/fields/RiskProvince__c.field-meta.xml
<CustomField>
    <fullName>RiskProvince__c</fullName>
    <description>Provincias de España</description>
    <label>Provincia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Province</valueSetName>
    </valueSet>
</CustomField>