force-app/main/default/objects/AMCM__c/fields/RiskSquareMetres__c.field-meta.xml
<CustomField>
    <fullName>RiskSquareMetres__c</fullName>
    <description>Muestra el valor numérico de metros cuadrados.</description>
    <label>Metros Cuadrados</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>