force-app/main/default/objects/AMCM__c/fields/RiskTenant__c.field-meta.xml
<CustomField>
    <fullName>RiskTenant__c</fullName>
    <description>Se muestra el propietario o inquilino.</description>
    <label>Propietario o Inquilino</label>
    <length>120</length>
    <type>Text</type>
</CustomField>