force-app/main/default/objects/AMCM__c/fields/RiskVersion__c.field-meta.xml
<CustomField>
    <fullName>RiskVersion__c</fullName>
    <description>Describe la versión.</description>
    <label>Versión</label>
    <length>120</length>
    <type>Text</type>
</CustomField>