force-app/main/default/objects/AMCM__c/fields/SalesSlip__c.field-meta.xml
<CustomField>
    <fullName>SalesSlip__c</fullName>
    <description>Comprobante de compra. Deberá viajar de Lead a Miembro de campaña</description>
    <label>Talón de Venta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>