force-app/main/default/objects/AMCM__c/fields/SFCampaign__c.field-meta.xml
<CustomField>
    <fullName>SFCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaña de SF al que está asociado</description>
    <label>Campaña SF</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Miembros de campaña AG</relationshipLabel>
    <relationshipName>Miembros_de_campa_a_AG</relationshipName>
    <type>Lookup</type>
</CustomField>