force-app/main/default/objects/AMCM__c/fields/SourceCess__c.field-meta.xml
<CustomField>
    <fullName>SourceCess__c</fullName>
    <description>Informa del origen del lead.</description>
    <label>Origen - CESS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>