force-app/main/default/objects/AMCM__c/fields/SourceManualRecord__c.field-meta.xml
<CustomField>
    <fullName>SourceManualRecord__c</fullName>
    <description>Valores de selección para registro manual.</description>
    <label>Origen - Registro Manual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CESSOrigenRegistroManual</valueSetName>
    </valueSet>
</CustomField>