force-app/main/default/objects/AMCM__c/fields/SourceType__c.field-meta.xml
<CustomField>
    <fullName>SourceType__c</fullName>
    <description>Seleccionar uno de los valores de medio.</description>
    <label>Medio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CESS_Lead_Medios</valueSetName>
    </valueSet>
</CustomField>