force-app/main/default/objects/AMCM__c/fields/SourceWeb__c.field-meta.xml
<CustomField>
    <fullName>SourceWeb__c</fullName>
    <description>Muestra el origen web.</description>
    <label>Origen - WEB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>