force-app/main/default/objects/AMCM__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Esta lista de valores tiene que estar alineada con el campo status de miembro de campaña</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Aborted</fullName>
                <label>No Cualificado</label>
            </value>
            <value>
                <fullName>Postponed</fullName>
                <label>Aplazado</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Cualificado</label>
            </value>
            <value>
                <fullName>Not contacted</fullName>
                <label>No contactado</label>
            </value>
            <value>
                <fullName>Working</fullName>
                <label>En Proceso</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>