force-app/main/default/objects/AMCM__c/fields/SystemAttempts__c.field-meta.xml
<CustomField>
    <fullName>SystemAttempts__c</fullName>
    <label>Número de intentos del sistema</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>