force-app/main/default/objects/AMCM__c/fields/TotalAttempts__c.field-meta.xml
<CustomField>
    <fullName>TotalAttempts__c</fullName>
    <label>Número total de intentos</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>