force-app/main/default/objects/AMCM__c/fields/Transference__c.field-meta.xml
<CustomField>
    <fullName>Transference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla que se marca a verdadero si la llamada ha sido transferida.</description>
    <label>Transferencia</label>
    <type>Checkbox</type>
</CustomField>