force-app/main/default/objects/AMCM__c/fields/WebSource__c.field-meta.xml
<CustomField>
    <fullName>WebSource__c</fullName>
    <description>Web Anunciante</description>
    <label>Web Anunciante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>