force-app/main/default/objects/AMCM__c/recordTypes/Additional.recordType-meta.xml
<RecordType>
    <fullName>Additional</fullName>
    <active>true</active>
    <description>Miembros de campaña adicionales</description>
    <label>Adicional</label>
</RecordType>