force-app/main/default/objects/AMCM__c/recordTypes/Managed.recordType-meta.xml
<RecordType>
    <fullName>Managed</fullName>
    <active>true</active>
    <description>Miembros de campaña gestionados</description>
    <label>Gestionado</label>
</RecordType>