force-app/main/default/objects/AMCM__c/validationRules/Lead_Field_Registro_Manual.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Field_Registro_Manual</fullName>
    <active>false</active>
    <description>Valida que el medio o el origen deben tener valor.</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;CESS_LeadDefault&quot;
&amp;&amp; ISBLANK( TEXT(Lead__r.source_type__c ))
&amp;&amp; ISBLANK( TEXT (Lead__r.source_manualrecord__c ))
&amp;&amp; ISBLANK( $User.cti_ani__c )</errorConditionFormula>
    <errorDisplayField>SourceManualRecord__c</errorDisplayField>
    <errorMessage>Debe indicar el origen o el medio.</errorMessage>
</ValidationRule>