force-app/main/default/objects/AMCM__c/validationRules/Lead_Field_Resultado.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Field_Resultado</fullName>
    <active>true</active>
    <description>Resultado Obligatorio para los Lead en estado final. Se basa en el campo Status del Miembro de Campaña AG</description>
    <errorConditionFormula>AND(
  $Setup.SwitchesConfiguration__c.DesactiveVRMiembrodeCampanaAG__c =false,
  RecordType.DeveloperName = &quot;Additional&quot;,
  OR(
    ISPICKVAL(Status__c , &quot;Unqualified&quot;),
    ISPICKVAL(Status__c , &quot;Qualified&quot;)
  ),
  ISBLANK(TEXT(Result__c))
)</errorConditionFormula>
    <errorDisplayField>Result__c</errorDisplayField>
    <errorMessage>Por favor indique resultado.</errorMessage>
</ValidationRule>